Fix two stories layout not being aligned

--- a/app/assets/stylesheets/layout/_two-col.scss
+++ b/app/assets/stylesheets/layout/_two-col.scss
@@ -1,38 +1,31 @@
 .two-col {
+  &__items {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-column-gap: 30px;
+
+    @include breakpoint($tablet) {
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+  .full-card {
+    margin-top: 30px;
+
+    @include breakpoint($tablet) {
+      margin-top: 0;
+    }
+    
+    .story-card-link {
+      height: 100%;
+    }
+    .story-card {
+      height: 100%;
+    }
+  }
   img {
     max-width: 100%;
   }
-  &__media-list {
-    @include container;
-    margin-bottom: 30px;
-    @include breakpoint($tablet) {
-      @include span(first 6);
-    }
-  }
-  &__last {
-    @include span(12);
-    margin-top: 20px;
-    @include breakpoint($tablet) {
-      @include span(last 6);
-      margin: 0;
-      .section--content {
-        h2 {
-          font-size: rem(18);
-        }
-      }
-    }
-    @include breakpoint($pc) {
-      .section--content {
-        padding: 30px;
-        h2 {
-          font-size: rem(26);
-        }
-        p {
-          font-size: rem(18);
-        }
-      }
-    }
-  }
+
 }
 
 .two-col__title {
